--- a/src/Components/MovieDetails/MovieDetails.css
+++ b/src/Components/MovieDetails/MovieDetails.css
@@ -3,6 +3,14 @@
    height: 100vh;
    color: white;
 }
+.parentDivMovieDetails .noVideo {
+   font-size: x-large;
+   font-weight: 300;
+   display: flex;
+   justify-content: center;
+   /* align-items: center; */
+   margin-top: 1%;
+}
 
 .parentDivMovieDetails .shadeDiv {
    width: 100%;
@@ -18,7 +26,10 @@
 }
 .parentDivMovieDetails .shadeDiv .sidePoster img {
    margin: 6rem 3rem;
-   width: 20rem;
+   /* width: 20rem; */
+   max-width: 30vw;
+   /* max-height: 65vh; */
+   max-height: 70vh;
    border-radius: 0.15rem;
 }
 .video {
