--- a/src/PopUps/VideoPopUp/VideoPopUp.css
+++ b/src/PopUps/VideoPopUp/VideoPopUp.css
@@ -2,8 +2,9 @@
    width: 95%;
    height: 80vh;
    /* background-color: rgb(0, 0, 0); */
-   background-color: rgb(23, 193, 240);
+   background-color: rgba(0, 0, 0, 0.782);
    position: absolute;
+   /* position: fixed; */
    top: 7.5vh;
    left: 2.5%;
    /* z-index: 1; */
@@ -16,31 +17,22 @@
 .parentVideoPopUp .close i {
    cursor: pointer;
    font-size: 2.5rem;
-   color: rgb(108, 108, 108);
+   /* color: rgb(108, 108, 108); */
+   color: rgb(142, 142, 142);
    /* position: absolute; */
    position: relative;
    left: -50%;
-   /* bottom:-3rem; */
-   /* top:-3rem; */
-   /* justify-content: center; */
-   /* align-items: center; */
-   /* left: 50%; */
-   /* right: 50%; */
-   /* margin: 0 auto; */
-   /* right: 1rem; */
-   /* top: 1rem; */
 }
 .parentVideoPopUp_banner {
    width: 100%;
    height: 100vh;
-   background-color: rgba(0, 0, 0, 0.68);
-   /* background-color: rgba(28, 194, 141, 0.68); */
-   position: absolute;
+   background-color: rgba(0, 0, 0, 0.932);
+   /* position: absolute; */
+   position: fixed;
    top: 0;
    left: 0;
    padding: 3rem 0 0 0;
    z-index: 1;
-   /* position: fixed; */
    /* overflow: hidden; */
 }
 .parentVideoPopUp_banner .close {
@@ -52,7 +44,7 @@
 .parentVideoPopUp_banner .close i {
    cursor: pointer;
    font-size: 2.5rem;
-   color: rgb(0, 0, 0);
+   color: rgb(142, 142, 142);
    position: relative;
    left: -50%;
    /* position:  static; */
